# Ego

./: .gitignore  CMakeLists.txt  README.md  constants.h  install_requirements.sh  main.cpp
ITC/: Bus.h  CMakeLists.txt  Frame.h
abstract/AModule/: AModule.cpp  AModule.h  CMakeLists.txt  ModuleStatus.h
abstract/APersonality/: APersonality.h  CMakeLists.txt  DefaultPersonality.cpp  DefaultPersonality.h
compute/CCuda/: CCuda.cpp  CCuda.h  CMakeLists.txt
core/: CMakeLists.txt  Core.cpp  Core.h
modules/MAudioPlayer/: CMakeLists.txt  MAudioPlayer.cpp  MAudioPlayer.h
modules/MCuda/: CMakeLists.txt  CudaKernels.cu  MCuda.cpp  MCuda.h
modules/MMotorController/: CMakeLists.txt  MMotorController.cpp  MMotorController.h
modules/MQtDisplay/: CMakeLists.txt  MQtDisplay.cpp  MQtDisplay.h  QtWindow.cpp  QtWindow.h  SharedFrameIPC.h  VideoWidget.cpp  VideoWidget.h
modules/MReSpeaker/: CMakeLists.txt  MReSpeaker.cpp  MReSpeaker.h
modules/MRealsenseCamera/: CMakeLists.txt  MRealsenseCamera.cpp  MRealsenseCamera.h
personality/PMicReader/: CMakeLists.txt  PMicReader.cpp  PMicReader.h
personality/PQBot/: CMakeLists.txt  PQBot.cpp  PQBot.h
personality/PRealsenseViewer/: CMakeLists.txt  PRealsenseViewer.cpp  PRealsenseViewer.h
shared/: AudioFrame.h  CMakeLists.txt  Frame.h  FrameRGB.h  FrameRGBD.h
